--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <!-- styles -->
   <link rel="stylesheet" href="style.css">
   <!-- google import -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 <body>
   <main class="main-container">
     <!-- City Search -->
@@ -20,6 +19,20 @@
         </span>
       </button>
     </header>
+
+    <section class="weather-info">
+      <div class="location-data-container">
+        <div class="location">
+          <span class="material-symbols-outlined">
+            location_on
+          </span>
+          <h4 class="country-txt">Los Angeles, California</h4>
+        </div>
+        <h5 class="current-date-txt">Sun, 20 Apr</h5>
+      </div>
+    </section>
+
+
 
   </main>
 </body>
